packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/upgrade-immutable-event-type-timespan-start.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if upgrading the timespan start of an event type is refused.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" timespan-start="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
          <property name="b" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" timespan-start="b" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
          <property name="b" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
